// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should redner error for invaldid form submission 1`] = `
<div>
  <form
    onSubmit={[Function]}
  >
    <input
      autoFocus={true}
      name="description"
      onChange={[Function]}
      placeholder="Description"
      type="text"
      value=""
    />
    <input
      name="amount"
      onChange={[Function]}
      placeholder="Amount"
      type="text"
      value=""
    />
    <DatePicker
      allowSameDay={false}
      dateFormat="L"
      dateFormatCalendar="MMMM YYYY"
      disabled={false}
      disabledKeyboardNavigation={false}
      dropdownMode="scroll"
      fixedHeight={true}
      isClearable={true}
      monthsShown={1}
      onBlur={[Function]}
      onChange={[Function]}
      onClickOutside={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMonthChange={[Function]}
      onSelect={[Function]}
      onYearChange={[Function]}
      placeholderText="Select date for expense"
      preventOpenOnFocus={false}
      selected={"1970-01-01T00:00:00.000Z"}
      shouldCloseOnSelect={true}
      showTimeSelect={false}
      timeCaption="Time"
      timeIntervals={30}
      todayButton="Today"
      withPortal={false}
    />
    <textarea
      name="note"
      onChange={[Function]}
      placeholder="Add a note for the expense (optional)"
      value=""
    />
    <button>
      add expense
    </button>
  </form>
</div>
`;

exports[`should redner error for invaldid form submission 2`] = `
<div>
  <p>
    Please provide description and amount
  </p>
  <form
    onSubmit={[Function]}
  >
    <input
      autoFocus={true}
      name="description"
      onChange={[Function]}
      placeholder="Description"
      type="text"
      value=""
    />
    <input
      name="amount"
      onChange={[Function]}
      placeholder="Amount"
      type="text"
      value=""
    />
    <DatePicker
      allowSameDay={false}
      dateFormat="L"
      dateFormatCalendar="MMMM YYYY"
      disabled={false}
      disabledKeyboardNavigation={false}
      dropdownMode="scroll"
      fixedHeight={true}
      isClearable={true}
      monthsShown={1}
      onBlur={[Function]}
      onChange={[Function]}
      onClickOutside={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMonthChange={[Function]}
      onSelect={[Function]}
      onYearChange={[Function]}
      placeholderText="Select date for expense"
      preventOpenOnFocus={false}
      selected={"1970-01-01T00:00:00.000Z"}
      shouldCloseOnSelect={true}
      showTimeSelect={false}
      timeCaption="Time"
      timeIntervals={30}
      todayButton="Today"
      withPortal={false}
    />
    <textarea
      name="note"
      onChange={[Function]}
      placeholder="Add a note for the expense (optional)"
      value=""
    />
    <button>
      add expense
    </button>
  </form>
</div>
`;

exports[`should render ExpenseForm correclty 1`] = `
<div>
  <form
    onSubmit={[Function]}
  >
    <input
      autoFocus={true}
      name="description"
      onChange={[Function]}
      placeholder="Description"
      type="text"
      value=""
    />
    <input
      name="amount"
      onChange={[Function]}
      placeholder="Amount"
      type="text"
      value=""
    />
    <DatePicker
      allowSameDay={false}
      dateFormat="L"
      dateFormatCalendar="MMMM YYYY"
      disabled={false}
      disabledKeyboardNavigation={false}
      dropdownMode="scroll"
      fixedHeight={true}
      isClearable={true}
      monthsShown={1}
      onBlur={[Function]}
      onChange={[Function]}
      onClickOutside={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMonthChange={[Function]}
      onSelect={[Function]}
      onYearChange={[Function]}
      placeholderText="Select date for expense"
      preventOpenOnFocus={false}
      selected={"1970-01-01T00:00:00.000Z"}
      shouldCloseOnSelect={true}
      showTimeSelect={false}
      timeCaption="Time"
      timeIntervals={30}
      todayButton="Today"
      withPortal={false}
    />
    <textarea
      name="note"
      onChange={[Function]}
      placeholder="Add a note for the expense (optional)"
      value=""
    />
    <button>
      add expense
    </button>
  </form>
</div>
`;

exports[`should render ExpenseForm with data 1`] = `
<div>
  <form
    onSubmit={[Function]}
  >
    <input
      autoFocus={true}
      name="description"
      onChange={[Function]}
      placeholder="Description"
      type="text"
      value=""
    />
    <input
      name="amount"
      onChange={[Function]}
      placeholder="Amount"
      type="text"
      value=""
    />
    <DatePicker
      allowSameDay={false}
      dateFormat="L"
      dateFormatCalendar="MMMM YYYY"
      disabled={false}
      disabledKeyboardNavigation={false}
      dropdownMode="scroll"
      fixedHeight={true}
      isClearable={true}
      monthsShown={1}
      onBlur={[Function]}
      onChange={[Function]}
      onClickOutside={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMonthChange={[Function]}
      onSelect={[Function]}
      onYearChange={[Function]}
      placeholderText="Select date for expense"
      preventOpenOnFocus={false}
      selected={"1970-01-01T00:00:00.000Z"}
      shouldCloseOnSelect={true}
      showTimeSelect={false}
      timeCaption="Time"
      timeIntervals={30}
      todayButton="Today"
      withPortal={false}
    />
    <textarea
      name="note"
      onChange={[Function]}
      placeholder="Add a note for the expense (optional)"
      value=""
    />
    <button>
      add expense
    </button>
  </form>
</div>
`;
